<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/food"
        android:textAlignment="center"
        android:textSize="28sp"
        android:layout_marginTop="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/happyBar" />

    <TextView
        android:id="@+id/foodOutFromHundred"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/outOfHundred"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ProgressBar
        android:id="@+id/foodBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="24sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/food_progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodOutFromHundred" />

    <View
        android:id="@+id/mainScreenDownWave"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:background="@drawable/wave_down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/mainScreenUpWave"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:background="@drawable/wave_upper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/petNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text=""
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/mainScreenUpWave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/petImageView"
        android:layout_width="180sp"
        android:layout_height="180sp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/petImageDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainScreenUpWave"
        app:srcCompat="@drawable/catico" />

    <ProgressBar
        android:id="@+id/energyBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="24sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/energy_progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/energyOutFromHundred" />

    <ProgressBar
        android:id="@+id/happyBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="24sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/happy_progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/happyOutFromHundred" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/energy"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petImageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/happy"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/energyBar" />

    <TextView
        android:id="@+id/happyOutFromHundred"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/outOfHundred"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/energyOutFromHundred"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/outOfHundred"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/wakeUpButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/wake_up"
        app:layout_constraintEnd_toEndOf="@+id/mainScreenDownWave"
        app:layout_constraintTop_toBottomOf="@+id/foodBar"
        android:onClick="onWakeUpButtonClick"/>

    <ImageButton
        android:id="@+id/wakeUpButton2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/food_button"
        android:onClick="onEatButtonClick"
        app:layout_constraintEnd_toStartOf="@+id/wakeUpButton"
        app:layout_constraintStart_toEndOf="@+id/sleepButton"
        android:layout_marginStart="32sp"
        android:layout_marginEnd="32sp"
        app:layout_constraintTop_toBottomOf="@+id/foodBar" />

    <ImageButton
        android:id="@+id/sleepButton"
        android:layout_width="60dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/sleep"
        android:onClick="onSleepButtonClick"
        android:layout_marginStart="32sp"
        app:layout_constraintStart_toEndOf="@+id/playButton"
        app:layout_constraintTop_toBottomOf="@+id/foodBar" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/play_with_cat"
        app:layout_constraintStart_toStartOf="@+id/mainScreenDownWave"
        app:layout_constraintTop_toBottomOf="@+id/foodBar"
        android:onClick="onPlayButtonClick" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/sleepGif"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        android:src="@drawable/sleep_gif2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="@+id/petImageView"
        app:layout_constraintTop_toBottomOf="@+id/mainScreenUpWave" />


</androidx.constraintlayout.widget.ConstraintLayout>